[gd_scene load_steps=4 format=3 uid="uid://kdb1ewn5jld4"]

[ext_resource type="Script" uid="uid://bfmghn75qb4g0" path="res://scripts/start.gd" id="1_jaeev"]
[ext_resource type="Texture2D" uid="uid://43j1p4k7emgt" path="res://assets/1-bit_Pixel_Icons/Icons_Software.png" id="2_u80x2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bodal"]
atlas = ExtResource("2_u80x2")
region = Rect2(64, 32, 16, 16)

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jaeev")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -144.0
offset_top = -81.0
offset_right = 144.0
offset_bottom = 81.0
color = Color(0, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Tittle" type="Label" parent="."]
layout_mode = 0
offset_left = -104.0
offset_top = -49.0
offset_right = 104.0
offset_bottom = -26.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "BATU, GUNTING, KERTAS"
horizontal_alignment = 1

[node name="win" type="Label" parent="."]
layout_mode = 0
offset_left = -139.0
offset_top = 35.0
offset_right = -93.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 1, 0.15625, 1)
text = "win: x"

[node name="lose" type="Label" parent="."]
layout_mode = 0
offset_left = -140.0
offset_top = 57.0
offset_right = -91.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "lose: x"

[node name="version" type="Label" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 65.0
offset_right = 141.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 9
text = "version xx"
horizontal_alignment = 2

[node name="money" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = -78.0
offset_right = 139.0
offset_bottom = -58.0
theme_override_colors/font_color = Color(0.921875, 1, 0, 1)
theme_override_font_sizes/font_size = 14
text = "money: 0"
horizontal_alignment = 2

[node name="exit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -141.0
offset_top = -77.0
offset_right = -125.0
offset_bottom = -61.0
texture_normal = SubResource("AtlasTexture_bodal")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -21.0
offset_right = 49.0
offset_bottom = 83.0
scale = Vector2(0.6, 0.6)

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ORIGINAL"

[node name="PowerUp" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "POWER UP"

[node name="Shop" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "SHOP"

[node name="World" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "World"

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/PowerUp" to="." method="_on_power_up_pressed"]
[connection signal="pressed" from="VBoxContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="VBoxContainer/World" to="." method="_on_world_pressed"]
